# faucetbot

./: .env.example  .gitignore  README.md  pyproject.toml
src/faucetbot/: __init__.py  api.py  bot.py  browser.py  cli.py
